# r0-even-odd

./: .gitignore  README.md
host/: Cargo.toml
host/src/: main.rs
methods/: Cargo.toml
methods/check-adult/: Cargo.toml
methods/check-adult/src/: main.rs
methods/check-even/: Cargo.toml
methods/check-even/src/: main.rs
methods/check-odd/: Cargo.toml
methods/check-odd/src/: main.rs
